# gpumon-client

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
.github/workflows/: build.yml
example/cuda/: CMakeLists.txt  block_style_example.cu  system_monitor.cu  test_occupancy.cu
example/python/: 01_basic.py  02_numba_cuda.py  03_kernel.launch.py  03_pytorch_benchmark.py  04_pytorch_benchmark.py  requirements.txt
example/python/analyzer/: 01_analyzer_sample.py
example/python/viz/: 01_plot_memory_timeline.py  02_plot_stress_timeline.py
include/: gpufl.hpp
include/gpufl/: gpufl.hpp
include/gpufl/backends/: cuda.hpp
include/gpufl/backends/amd/: rocm_collector.cpp  rocm_collector.hpp
include/gpufl/backends/nvidia/: nvml_collector.cpp  nvml_collector.hpp
include/gpufl/core/: common.cpp  common.hpp  debug_logger.cpp  debug_logger.hpp  events.hpp  gpufl.cpp  logger.cpp  logger.hpp  monitor.hpp  monitor_backend.hpp  ring_buffer.hpp  runtime.cpp  runtime.hpp  sampler.cpp  sampler.hpp  scope_registry.hpp  stack_trace.cpp  trace_type.hpp
include/gpufl/cuda/: cuda.cpp  cuda.hpp  cupti_backend.cpp  cupti_backend.hpp  launch.hpp  monitor.cpp
include/gpumon/backends/: cuda.hpp
include/gpumon/core/: common.hpp  monitor.hpp
python/: bindings.cpp
python/gpufl/: .gitignore  __init__.py  utils.py
python/gpufl/analyzer/: __init__.py  analyzer.py
python/gpufl/viz/: __init__.py  common.py  reader.py  summary.py  timeline.py
schema/: ndjson.schema.json
tests/: CMakeLists.txt  verify_pipeline.py
tests/backends/nvidia/: test_cuda_collector.cpp  test_nvidia_backend.cpp  test_nvml_collector.cpp
tests/common/: test_utils.hpp
tests/core/: test_analyzer.cpp  test_monitor.cpp
tests/python/: conftest.py  test_analyzer.py
